[gd_scene load_steps=2 format=3 uid="uid://clcrtn15qpsai"]

[ext_resource type="Script" uid="uid://cxgllcjsc16s5" path="res://scenes/items/gems/gem.gd" id="1_l0vri"]

[node name="Gem" type="Area2D"]
collision_layer = 4
collision_mask = 13
script = ExtResource("1_l0vri")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
region_enabled = true
region_rect = Rect2(0, 65.5, 29.7255, 30.5)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
